@@ -13,9 +13,9 @@
   <head>
     <title>Reset Password</title>
     <script type="text/javascript">
-    jQuery(document).ready(function($) {
-        $('input[@name=username]')[0].focus();
-    });
+      jQuery(document).ready(function($) {
+          $('#username').focus();
+      });
     </script>
   </head>
 
@@ -30,7 +30,8 @@
       <form method="post" id="acctmgr_passwd_reset" action="">
         <div>
           <label>Username:
-            <input type="text" name="username" class="textwidget" size="20" />
+            <input type="text" id="username" name="username"
+                   class="textwidget" size="20" />
           </label>
         </div>
         <div>
